k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybackend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mybackend
  template:
    metadata:
      labels:
        app: mybackend
    spec:
      containers:
      - name: mybackend
        image: susguzman/so1-s223-back:0.1.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 3800
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: LoadBalancer
  selector:
    app: mybackend
  ports:
  - port: 3800
    targetPort: 3800
