k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydatabase
spec:
  selector:
    matchLabels:
      app: mydatabase
  template:
    metadata:
      labels:
        app: mydatabase
    spec:
      containers:
      - name: mydatabase
        image: gvenzl/oracle-xe:21.3.0
        resources:
          limits:
            memory: "2Gi"
            cpu: "1"
        ports:
        - containerPort: 1521
---
apiVersion: v1
kind: Service
metadata:
  name: database-svc
spec:
  type: ClusterIP
  selector:
    app: mydatabase
  ports:
  - port: 1521
    targetPort: 1521
